--- a/nanobrowse/templates/search/confirmation_history.html
+++ b/nanobrowse/templates/search/confirmation_history.html
@@ -1,5 +1,5 @@
-<table class="mt-6">
-    <thead class="text-gray-400">
+<table id="confirmationHistoryTable" class="mt-6">
+     <thead class="text-gray-400">
       <td></td>
       <td class="justify-center">Recent Confirmations</td>
       <td class="px-2">Stats</td>
