Load receivables in background
- rename from pending to receivable

--- a/nanobrowse/templates/account_viewer.html
+++ b/nanobrowse/templates/account_viewer.html
@@ -82,7 +82,6 @@
         </button>
       </div>
 
-
       
       {% include 'account_viewer/history_table.html' %}
       {% include 'account_viewer/pending_table.html' %}
@@ -91,6 +90,7 @@
 
       <script src="{{ url_for('static', filename='js/common.js') }}"></script>
       <script src="{{ url_for('static', filename='js/delegators.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/receivables.js') }}"></script>
       
     </div>
     
