--- a/nanobrowse/templates/account_viewer/account_info.html
+++ b/nanobrowse/templates/account_viewer/account_info.html
@@ -14,7 +14,7 @@
           <tr>
             <td data-show-table="pendingTable" style="cursor:pointer" class="bg-gray-700 text-white text-xs px-3 rounded w-32 h-8 flex flex-col items-center justify-center">
               <div>Ready to receive</div>
-              <div>({{account_data['receivable_count'] }} blocks)</div>
+              <!-- <div>({{account_data['receivable_count'] }} blocks)</div> -->
             </td>
             <td class="px-3 py-2 font-bold">{{account_data['receivable_formatted'] }}</td>
           </tr>
