--- a/nanobrowse/templates/account_viewer/account_info.html
+++ b/nanobrowse/templates/account_viewer/account_info.html
@@ -12,7 +12,7 @@
           {% if account_data['show_receivable'] %}
           <!-- Receivable balance -->
           <tr>
-            <td data-show-table="pendingTable" style="cursor:pointer" class="bg-gray-700 text-white text-xs px-3 rounded w-32 h-8 flex flex-col items-center justify-center">
+            <td data-show-table="receivableTable" style="cursor:pointer" class="bg-gray-700 text-white text-xs px-3 rounded w-32 h-8 flex flex-col items-center justify-center">
               <div>Ready to receive</div>
               <!-- <div>({{account_data['receivable_count'] }} blocks)</div> -->
             </td>
