--- a/nanobrowse/templates/account_viewer/receivable_table.html
+++ b/nanobrowse/templates/account_viewer/receivable_table.html
@@ -1,7 +1,7 @@
 <!-- Receivables Table -->
-<table id="pendingTable" class="table mt-6 mx-auto" style="display: none">
+<table id="receivableTable" class="table mt-6 mx-auto" style="display: none">
   <tbody>
-    <tr id="pendingSpinner">
+    <tr id="receivableSpinner">
       <td colspan="3" class="text-center">
         <div
           class="loader ease-linear rounded-full border-8 border-t-8 border-gray-200 h-64 w-64"
