--- a/nanobrowse/templates/account_viewer/history_table.html
+++ b/nanobrowse/templates/account_viewer/history_table.html
@@ -15,7 +15,7 @@
           <span
             class="flex items-center justify-center w-20 h-6 text-xs rounded {% if entry['type'] == 'send' %} bg-blue-500 text-white {% elif entry['type'] == 'change' %} bg-yellow-300 text-gray-700 {% elif entry['type'] == 'receive' %} bg-green-500 text-white {% else %} bg-gray-500 text-white {% endif %}"
           >
-            {{ entry['type'] }}
+            {{ entry['type_formatted'] }}
           </span>
           <p class="text-xs">{{ entry['time_ago'] }}</p>
         </a>
@@ -52,15 +52,13 @@
     {% for entry in account_history['grouped_history'] %}
     <tr class="divide-y divide-gray-400">
       <!-- Type Label (Send/Receive) -->
-      <td class="px-2 py-2 whitespace-nowrap text-sm">
-        <a href="{{ request.url_root }}block/{{ entry['hash'] }}">
+      <td class="px-2 py-2 whitespace-nowrap text-sm">        
           <span
             class="flex items-center justify-center w-20 h-6 text-xs rounded {% if entry['type'] == 'send' %} bg-blue-500 text-white {% elif entry['type'] == 'change' %} bg-gray-700 text-white {% elif entry['type'] == 'receive' %} bg-green-500 text-white {% else %} bg-gray-500 text-white {% endif %}"
           >
-            {{ entry['type'] }}
+            {{ entry['type_formatted'] }}
           </span>
-          <p class="text-xs">{{ entry['time_ago'] }}</p>
-        </a>
+          <p class="text-xs">{{ entry['time_ago'] }}</p>      
       </td>
 
       <!-- Amount -->
